--- a/arch/arm64/configs/lineage_s2_defconfig
+++ b/arch/arm64/configs/lineage_s2_defconfig
@@ -875,14 +875,14 @@ CONFIG_SOCKEV_NLMCAST=y
 # CONFIG_HAMRADIO is not set
 # CONFIG_CAN is not set
 # CONFIG_IRDA is not set
-CONFIG_BT=y
-CONFIG_BT_RFCOMM=y
-CONFIG_BT_RFCOMM_TTY=y
-CONFIG_BT_BNEP=y
-CONFIG_BT_BNEP_MC_FILTER=y
-CONFIG_BT_BNEP_PROTO_FILTER=y
-CONFIG_BT_HIDP=y
-CONFIG_BT_HCISMD=y
+# CONFIG_BT=y
+# CONFIG_BT_RFCOMM=y
+# CONFIG_BT_RFCOMM_TTY=y
+# CONFIG_BT_BNEP=y
+# CONFIG_BT_BNEP_MC_FILTER=y
+# CONFIG_BT_BNEP_PROTO_FILTER=y
+# CONFIG_BT_HIDP=y
+# CONFIG_BT_HCISMD=y
 
 #
 # Bluetooth device drivers
@@ -890,13 +890,13 @@ CONFIG_BT_HCISMD=y
 # CONFIG_BT_HCIBTUSB is not set
 # CONFIG_BT_HCIBTSDIO is not set
 # CONFIG_BT_HCIUART is not set
-CONFIG_BT_HCIUART_H4=y
+# CONFIG_BT_HCIUART_H4=y
 # CONFIG_BT_HCIBCM203X is not set
 # CONFIG_BT_HCIBPA10X is not set
 # CONFIG_BT_HCIBFUSB is not set
-CONFIG_BT_HCIVHCI=y
+# CONFIG_BT_HCIVHCI=y
 # CONFIG_BT_MRVL is not set
-CONFIG_MSM_BT_POWER=y
+# CONFIG_MSM_BT_POWER=y
 # CONFIG_AF_RXRPC is not set
 CONFIG_FIB_RULES=y
 CONFIG_WIRELESS=y
@@ -4155,3 +4155,64 @@ CONFIG_SECURITY_TOMOYO_MAX_AUDIT_LOG=1024
 CONFIG_SECURITY_TOMOYO_POLICY_LOADER="/sbin/tomoyo-init"
 CONFIG_SECURITY_TOMOYO_ACTIVATION_TRIGGER="/sbin/init"
 CONFIG_EVM_HMAC_VERSION=2
+
+#
+# Depending options for new stuff from backports
+#
+# CONFIG_CRC16=y
+CONFIG_CRYPTO=y
+CONFIG_CRYPTO_BLKCIPHER=y
+CONFIG_CRYPTO_AES=y
+CONFIG_CRYPTO_CMAC=y
+CONFIG_CRYPTO_HMAC=y
+CONFIG_CRYPTO_ECB=y
+CONFIG_CRYPTO_SHA256=y
+CONFIG_CRYPTO_USER_API=y
+CONFIG_CRYPTO_USER_API_HASH=y
+CONFIG_CRYPTO_USER_API_SKCIPHER=y
+#CONFIG_TTY=y
+
+#
+# Backports settings
+#
+CONFIG_BACKPORT_DIR="backports/"
+CONFIG_BACKPORT_INTEGRATE=y
+# CONFIG_BACKPORT_KERNEL_3_5=y #disable for kernel > 3.4
+# CONFIG_BACKPORT_KERNEL_3_6=y #disable for kernel > 3.4
+# CONFIG_BACKPORT_KERNEL_3_7=y #disable for kernel > 3.4
+# CONFIG_BACKPORT_KERNEL_3_8=y #disable for kernel > 3.4
+# CONFIG_BACKPORT_KERNEL_3_9=y #disable for kernel > 3.4
+CONFIG_BACKPORT_KERNEL_3_10=y #disable for kernel > 3.10
+CONFIG_BACKPORT_KERNEL_3_11=y #disable for kernel > 3.10
+CONFIG_BACKPORT_KERNEL_3_12=y #disable for kernel > 3.10
+CONFIG_BACKPORT_KERNEL_3_13=y #disable for kernel > 3.10
+CONFIG_BACKPORT_KERNEL_3_14=y #disable for kernel > 3.10
+CONFIG_BACKPORT_KERNEL_3_15=y #disable for kernel > 3.10
+CONFIG_BACKPORT_KERNEL_3_16=y #disable for kernel > 3.10
+CONFIG_BACKPORT_KERNEL_3_17=y #disable for kernel > 3.10
+CONFIG_BACKPORT_KERNEL_3_18=y #disable for kernel = 3.18
+CONFIG_BACKPORT_KERNEL_3_19=y
+CONFIG_BACKPORT_KERNEL_4_0=y
+CONFIG_BACKPORT_KERNEL_4_1=y
+CONFIG_BACKPORT_KERNEL_4_2=y
+CONFIG_BACKPORT_KERNEL_NAME="Linux"
+CONFIG_BACKPORT_KERNEL_VERSION="v4.2"
+CONFIG_BACKPORT_LINUX=y
+CONFIG_BACKPORT_VERSION="v4.2"
+CONFIG_BACKPORT_BPAUTO_USERSEL_BUILD_ALL=y
+
+
+#
+# Backports
+#
+CONFIG_BACKPORT_BT=y
+CONFIG_BACKPORT_BT_RFCOMM=y
+CONFIG_BACKPORT_BT_RFCOMM_TTY=y
+CONFIG_BACKPORT_BT_BNEP=y
+CONFIG_BACKPORT_BT_BNEP_MC_FILTER=y
+CONFIG_BACKPORT_BT_BNEP_PROTO_FILTER=y
+CONFIG_BACKPORT_BT_HIDP=y
+CONFIG_BACKPORT_BT_HCISMD=y
+CONFIG_BACKPORT_BT_HCIVHCI=y
+CONFIG_BACKPORT_MSM_BT_POWER=y
+CONFIG_BACKPORT_BT_HCIUART_H4=y
